# one-line-a-day-py

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml
one_line_day_py/: main.py  test_script.py
one_line_day_py/src/: app.py  model.py  settings.py
one_line_day_py/src/data/: __init__.py  json_back.py  sql_back.py
src/: app.py  model.py  settings.py
src/data/: __init__.py  json_back.py  sql_back.py
