[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "one-line-day-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar>=2.18.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sniffio>=1.3.1",
    "uuid>=1.30",
    "uvicorn>=0.38.0",
]
